Fixed Firefox and Safari Issue. The negative margin on the icon was causing the toolbar mis-alignment.  Because this is the first element to the left, I was able to use absolute positioning to align the icon.

--- a/src/mmw/sass/pages/_search-map.scss
+++ b/src/mmw/sass/pages/_search-map.scss
@@ -40,8 +40,10 @@
 
   .search-icon {
     font-size: 0.8rem;
-    margin-left: -2.5rem;
     color: $black-54;
+    position: absolute;
+    top: 30px;
+    left: 293px;
 
     &.empty {
       color: $black-24;
